infra/overlay/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modamatch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: modamatch
      tier: frontend
  template:
    metadata:
      labels:
        app: modamatch
        tier: frontend
    spec:
      containers:
        - name: modamatch
          image: ghcr.io/quantummob/modamatch-dev:latest
