infra/overlay/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: modamatch
spec:
  rules:
    - host: dev-modamatch.qmo.io
      http:
        paths:
          - backend:
              serviceName: dev-modamatch
              servicePort: 80
